/*
 * Copyright (C) 2024 by Fonoster Inc (https://fonoster.com)
 * http://github.com/fonoster/fonoster
 *
 * This file is part of Fonoster
 *
 * Licensed under the MIT License (the "License");
 * you may not use this file except in compliance with
 * the License. You may obtain a copy of the License at
 *
 *    https://opensource.org/licenses/MIT
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package fonoster.numbers.v1beta2;

import "trunks.proto";

// The Numbers service definition
service Numbers {
  // Create a new Number
  rpc CreateNumber (CreateNumberRequest) returns (CreateNumberResponse) {}
  // Update an existing Number
  rpc UpdateNumber (UpdateNumberRequest) returns (UpdateNumberResponse) {}
  // Get an existing Number
  rpc GetNumber (GetNumberRequest) returns (Number) {}
  // Delete an existing Number
  rpc DeleteNumber (DeleteNumberRequest) returns (DeleteNumberResponse) {}
  // List Numbers
  rpc ListNumbers (ListNumbersRequest) returns (ListNumbersResponse) {}
}

// The message for the Number resource
message Number {
  // The unique identifier of the Number
  string ref = 1;
  // The name of the Number
  string name = 2;
  // The tel_url of the Number
  string tel_url = 3;
  // The aor_link of the Number
  string aor_link = 4;
  // The city of the Number
  string city = 5;
  // The country of the Number
  string country = 6;
  // The country_iso_code of the Number
  string country_iso_code = 7;
  // The header to use for session affinity
  string session_affinity_header = 8;
  // Extra headers to send to the trunk
  repeated ExtraHeader extra_headers = 9;
  // The date when the Number was created
  int32 created_at = 10;
  // The date when the Number was last updated
  int32 updated_at = 11;
  // The trunk this number is associated with
  fonoster.trunks.v1beta2.Trunk trunk = 12;
}

// The message for the ExtraHeader field
message ExtraHeader {
  string name = 1;
  string value = 2;
}

// The request message for Numbers.CreateNumber
message CreateNumberRequest {
  // The name of the Number
  string name = 1;
  // The tel_url of the Number
  string tel_url = 2;
  // The aor_link of the Number
  string aor_link = 3;
  // The city of the Number
  string city = 4;
  // The country of the Number
  string country = 5;
  // The country_iso_code of the Number
  string country_iso_code = 6;
  // The header to use for session affinity
  string session_affinity_header = 7;
  // Extra headers to send to the trunk
  repeated ExtraHeader extra_headers = 8;
  // Reference to the trunk this number is associated with
  string trunk_ref = 9;
}

// The response message for Numbers.CreateNumber
message CreateNumberResponse {
  // The reference of the Number
  string ref = 1;
}

// The request message for Numbers.UpdateNumber
message UpdateNumberRequest {
  // The unique identifier of the Number
  string ref = 1;
  // The name of the Number
  string name = 2;
  // The aor_link of the Number
  string aor_link = 4;
  // The header to use for session affinity
  string session_affinity_header = 8;
  // Extra headers to send to the trunk
  repeated ExtraHeader extra_headers = 9;
  // Reference to the trunk this number is associated with
  string trunk_ref = 10;
}

// The response message for Numbers.UpdateNumber
message UpdateNumberResponse {
  // The reference of the Number
  string ref = 1;
}

// The request message for Numbers.GetNumber
message GetNumberRequest {
  // The unique identifier of the Number
  string ref = 1;
}

// The request message for Numbers.DeleteNumber
message DeleteNumberRequest {
  // The unique identifier of the Number
  string ref = 1;
}

// The response message for Numbers.DeleteNumber
message DeleteNumberResponse {
  // The reference of the Number
  string ref = 1;
}

// The request message for Numbers.ListNumbers
message ListNumbersRequest {
  // The maximum number of items in the list
  int32 page_size = 1;
  // The next_page_token value returned from the previous request, if any
  string page_token = 2;
}

// The response message for Numbers.ListNumbers
message ListNumbersResponse {
  // List of Numbers
  repeated Number items = 1;
  // Token to retrieve the next page of results, or empty if there are no more results in the list
  string next_page_token = 2;
}